# mypypi

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  README_ZH.md  README_zh.md  compose.yml  pyproject.toml  requirements.txt  server.py  start.sh
mypypi_server/: config.py  routers.py  utils.py  web.py
mypypi_server/router/: pypi.py  utils.py
scripts/: sync.py
scripts/backup-sync-cu126/: packages.txt  sync_metadata.json
scripts/backup-sync-cu128/: sync_metadata.json
scripts/backup-sync-cu129/: packages.txt  source.txt  sync_metadata.json
scripts/cu126/: packages.txt  source.txt
scripts/cu128/: packages.txt  source.txt
scripts/cu129/: packages.txt
scripts/cu130/: packages.txt
scripts/sync/: packages.txt  source.txt
scripts_backup/cu128/: packages.txt  sync_metadata.json
scripts_backup/cu129/: packages.txt  sync_metadata.json
scripts_backup/cu130/: source.txt  sync_metadata.json
