[project]
name = "mypypi"
version = "0.1.0"
description = "A pypi server with a modern Web interface, customizable packages, caching, and mirroring functionality."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pip>=25.1.1",
    "pypi-browser-webapp>=0.0.12",
    "pypiserver>=2.3.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.2",
]
