[project]
name = "mypypi"
version = "0.1.0"
description = "A pypi server with a modern Web interface, customizable packages, caching, and mirroring functionality."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.1.1",
    "pypi-browser-webapp",
    "pypiserver",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
]

[tool.uv.sources]
pypiserver = { path = "thirdparty/pypiserver" }
pypi-browser-webapp = { path = "thirdparty/pypi-browser" }
