[project]
name = "mypypi"
version = "0.1.0"
description = "A pypi server with a modern Web interface, customizable packages, caching, and mirroring functionality."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "lxml>=5.4.0",
    "passlib>=1.7.4",
    "pip>=25.1.1",
    "pypi-browser-webapp",
    "pypiserver",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
]

[tool.uv.sources]
pypiserver = { path = "thirdparty/pypiserver" }
pypi-browser-webapp = { path = "thirdparty/pypi-browser" }
